force-app/main/default/objects/Interest_Product__c/Interest_Product__c.object-meta.xml
<CustomObject>
    <label>Interest Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interest Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>