force-app/main/default/objects/Interest_Product__c/fields/Current_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Rate__c</fullName>
    <label>Current Rate</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>