force-app/main/default/objects/Interest_Product__c/fields/Minimum_Rate__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Rate__c</fullName>
    <label>Minimum Rate</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>