force-app/main/default/objects/Interest_Product__c/fields/Rate_Last_Changed__c.field-meta.xml
<CustomField>
    <fullName>Rate_Last_Changed__c</fullName>
    <label>Rate Last Changed</label>
    <type>Date</type>
</CustomField>